Changed all widths greater than 1000px in templatemo_styles.css to max-width to keep horizontal scroll bars from appearing on smaller screens. Also removed spaces before percentage signs to prevent them from being pushed down onto a new line.

--- a/templatemo_style.css
+++ b/templatemo_style.css
@@ -60,7 +60,7 @@ h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }
 #templatemo_wrapper {
 	margin: 0 auto;
 	padding: 0 10px;
-	width: 1100px;
+	max-width: 1100px;
 }
 
 #templatemo_header {
@@ -74,7 +74,7 @@ h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }
 	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 	font-size: 12px;
 	margin: 45px;
-	width: 1060px;
+	max-width: 1060px;
 	text-align: left;
 	border-collapse: collapse;
 }
@@ -140,11 +140,11 @@ h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }
 
 #templatemo_menu { float: right; }
 
-#templatemo_fw { width: 1100px; height: 500px; }
+#templatemo_fw { max-width: 1100px; height: 500px; }
 
 #templatemo_main {
 	clear: both;
-	width: 1160px;
+	max-width: 1160px;
 	padding: 60px 0 20px;
 }
 
@@ -155,7 +155,7 @@ h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }
 
 #templatemo_megacontent {
 	float: left;
-	width: 1100px;
+	max-width: 1100px;
 }
 
 #templatemo_sidebar {
@@ -309,7 +309,7 @@ h6 { font-size: 14px; margin: 0 0 5px; padding: 0; }
 
 #templatemo_footer {
 	clear: both;
-	width: 1100px;
+	max-width: 1100px;
 	padding: 30px 10px 15px;	
 	margin: 0 auto;
 	color: #666;
